--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,12 @@
 body {
 	background-color: White;
 	font-family: "Times New Roman", Verdana, sans-serif;
-	color: green;
+	color: red;
+}
+legend {
+	text-decoration: underline;
+	font-size: 1.5em;
+	font-weight: bold;
 }
 h1 {
 	text-align: center;
