--- a/css/style.css
+++ b/css/style.css
@@ -4,8 +4,8 @@ body {
 	color: red;
 }
 h1 {
-	text-decoration: underline;
 	font-size: 5em;
 	font-weight: bold;
 	padding: .5em;
+	color: black;
 }
