--- a/css/style.css
+++ b/css/style.css
@@ -3,10 +3,13 @@ body {
 	font-family: "Times New Roman", Verdana, sans-serif;
 	color: red;
 }
+div.header {
+	position: relative;
+	left: 10px;
+}
 h1 {
 	font-size: 5em;
 	font-weight: bold;
-	border: .5em;
 	color: black;
 }
 input {
@@ -14,4 +17,7 @@ input {
 }
 p {
 	margin: .5em;
+}
+form {
+	width: 50%;
 }
