--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,6 @@
 body {
-	background-color: White;
+	background-color: Grey;
 	font-family: "Times New Roman", Verdana, sans-serif;
-	color: red;
 }
 div.header {
 	position: relative;
@@ -10,14 +9,22 @@ div.header {
 h1 {
 	font-size: 5em;
 	font-weight: bold;
-	color: black;
 }
 input {
-	width: 100%;
+	width: 90%;
 }
 p {
 	margin: .5em;
 }
-form {
-	width: 50%;
+.container {
+	position: relative;
+	left: 0;
+	top: 0;
+	width: 80%;
+	margin-top: 10%;
+	margin-left: 10%;
+	margin-right: 10%;
+	margin-bottom: 10%;
+	background-color: White;
+	color: black;
 }
