--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 body {
-	background-color: Grey;
+	background-color: #474e5d;
 	font-family: "Times New Roman", Verdana, sans-serif;
 }
 div.header {
@@ -38,4 +38,13 @@ p {
 }
 label {
 	font-size: 1.5em;
+}
+input.submit {
+	position: relative;
+	left: 37.5%;
+	width: 25%;
+	background-color: blue;
+	color: white;
+	margin-top: 25px;
+	font-size: 1.2em;
 }
