--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,7 @@ h1 {
 	margin-top: 25px;
 }
 input {
-	width: 98%;
+	width: 100%;
 	padding: 1em;
 	background: #f1f1f1;
 	border: none;
@@ -35,6 +35,7 @@ p {
 	margin-left: 10%;
 	background-color: White;
 	color: black;
+	overflow: hidden;
 }
 label {
 	font-size: 1.5em;
