--- a/css/style.css
+++ b/css/style.css
@@ -51,11 +51,12 @@ input.submit {
 	font-size: 1.2em;
 }
 label.checkbox {
-	font-size: 1em;
+	font-size: 1.5em;
 	margin: 0;
 	font-weight: bold;
 }
 input.checkbox {
 	padding: 0em;
 	width: 0%;
+	margin-right: 1%;
 }
