--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,7 @@ h1 {
 	margin-top: 25px;
 }
 input {
+	display: block;
 	width: 100%;
 	padding: 1em;
 	background: #f1f1f1;
@@ -60,9 +61,14 @@ input.checkbox {
 	width: 0%;
 	margin-right: 1%;
 }
-div.float {
+label.float {
 	float: right;
+	margin-right: 40%;
 }
 input.name {
 	width: 50%;
+}
+input.float {
+	float: right;
+	display: inline-block;
 }
