--- a/css/media-style.css
+++ b/css/media-style.css
@@ -1,6 +1,6 @@
 @media screen and (min-width: 400px) {
 	body {
-	background-color: #limegreen;
+	background-color: limegreen;
 	font-family: "Times New Roman", Verdana, sans-serif;
 	}
 }
