--- a/css/media-style.css
+++ b/css/media-style.css
@@ -13,6 +13,8 @@
 	}
 	.container {
 		width: 100%;
+		margin: 10% auto 10% auto;
+		margin-left: 0%;
 }
 	
 @media screen and (min-width: 1200px) {
