--- a/css/media-style.css
+++ b/css/media-style.css
@@ -17,7 +17,7 @@
 		margin-left: 0%;
 		margin-top: 15%;
 	}
-	label {
+	div {
 		text-align: center;
 	}
 }
@@ -97,6 +97,9 @@
 	}
 	input.float {
 		margin-left: 5%;
+	}
+	div {
+		text-align: left;
 	}
 	div.container1 {
 		width:50%;
