--- a/css/media-style.css
+++ b/css/media-style.css
@@ -20,6 +20,9 @@
 	div {
 		text-align: center;
 	}
+	input {
+		text-align: center;
+	}
 }
 	
 @media screen and (min-width: 1200px) {
@@ -41,6 +44,7 @@
 		margin-top: 25px;
 	}
 	input {
+		text-align: left;
 		display: block;
 		width: 100%;
 		padding: 1em;
