--- a/css/media-style.css
+++ b/css/media-style.css
@@ -23,6 +23,14 @@
 	input {
 		text-align: center;
 	}
+	div.container_float {
+		width:100%;
+		float: none;
+	}
+	div.container_float1 {
+		width:100%;
+		float: none;
+	}
 }
 	
 @media screen and (min-width: 1200px) {
