--- a/css/media-style.css
+++ b/css/media-style.css
@@ -1,6 +1,6 @@
 @media screen and (min-width: 400px) {
 	body {
-		background-color: #474e5d;
+		background-color: limegreen;
 		font-family: "Times New Roman", Verdana, sans-serif;
 	}
 	h1 {
@@ -16,6 +16,7 @@
 		margin: 0% auto 0% auto;
 		margin-left: 0%;
 		margin-top: 15%;
+		overflow: scroll;
 	}
 	div {
 		text-align: center;
