--- a/css/style.css
+++ b/css/style.css
@@ -42,7 +42,7 @@ label {
 	font-size: 1.5em;
 	margin-left: .5em;
 }
-input.submit {
+button {
 	position: relative;
 	left: 37.5%;
 	width: 25%;
@@ -50,6 +50,7 @@ input.submit {
 	color: white;
 	margin-top: 25px;
 	font-size: 1.2em;
+	padding: 1em;
 }
 label.checkbox {
 	font-size: 1.5em;
