--- a/css/media-style.css
+++ b/css/media-style.css
@@ -96,15 +96,15 @@
 		font-size: 1.5em;
 		margin-left: .5em;
 	}
-	input.submit {
-		position: relative;
-		left: 37.5%;
-		width: 25%;
-		background-color: blue;
-		color: white;
-		margin-top: 25px;
-		font-size: 1.2em;
-		text-align: center;
+	button {
+	position: relative;
+	left: 37.5%;
+	width: 25%;
+	background-color: blue;
+	color: white;
+	margin-top: 25px;
+	font-size: 1.2em;
+	padding: 1em;
 	}
 	label.checkbox {
 		font-size: 1.5em;
