--- a/css/media-style.css
+++ b/css/media-style.css
@@ -1,6 +1,6 @@
 @media screen and (min-width: 400px) {
 	body {
-		background-color: #474e5d;
+		background-color: red;
 		font-family: "Times New Roman", Verdana, sans-serif;
 	}
 	h1 {
